--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ html {
   nav {
     background-color: #030a8c;
     color: #ffffff;
-    text-align: center;
+    /*text-align: center;*/
     position: absolute;
     margin: 0px;
     padding: 0px;
@@ -37,7 +37,7 @@ html {
   nav h2 {
     visibility: hidden;
   }
-  nav li {
+  nav ul {
     display:inline;
   } 
 
@@ -73,8 +73,8 @@ html {
   background-color: #590242;
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font: 1em;
-  float: none;
+  /*font: 1em;
+  float: none;*/
   position: relative;
  /* border-radius: 5px;*/
 }
@@ -85,8 +85,8 @@ html {
   background-color: #590242;
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font: 1em;
-  float: none;
+  /*font: 1em;
+  float: none;*/
   position: relative;
  /*border-radius: 5px;*/
 
@@ -98,8 +98,8 @@ html {
   background-color: #590242;
   color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font: 1em;
-  float: none;
+ /* font: 1em;
+  float: none;*/
   position: relative;
 /* border-radius: 5px;*/
 }
@@ -239,7 +239,6 @@ background-color: #0D8DFB;
  
  #curated div {
   background-color: #030a8c;
-
   }
    /*footer*/
   footer {
