--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ html {
   nav {
     background-color: #030a8c;
     color: #ffffff;
-    /*text-align: center;*/
+    text-align: center;
     position: absolute;
     margin: 0px;
     padding: 0px;
